chore(kodiak): fix config file (#6431)
Co-authored-by: Josh Black <josh@josh.black>

--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -1,9 +1,6 @@
 # .kodiak.toml
-# Minimal config. version is the only required field.
 version = 1
 
-# Kodiak will only act on PRs that have this label.
+[merge]
 automerge_label = "status: ready to merge 🎉"
-
-# Choose merge method for Kodiak to use.
 method = "squash"
