add new mri pictograms to healthcare (#6378)
* add new mri pictograms to healthcare

* chore(tests): update snapshots, remove extra svgs

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/pictograms.yml
+++ b/packages/pictograms/pictograms.yml
@@ -2457,6 +2457,21 @@
   friendly_name: MQA
   aliases:
     - mqa
+- name: mri
+  friendly_name: MRI
+  aliases:
+    - mri
+    - ct scan
+    - imaging
+    - radiology
+- name: mri--patient
+  friendly_name: MRI patient
+  aliases:
+    - mri
+    - mri patient
+    - ct scan
+    - imaging
+    - radiology
 - name: multitask
   friendly_name: Multitask
   aliases:
