--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -324,6 +324,8 @@ categories:
       - medical
       - medical--charts
       - medical--staff
+      - mri
+      - mri--patient
       - pill--bottle--01
       - pills
       - stethoscope
