feat(pictograms): add pregnancy pictogram to healthcare (#6376)
* add new pregnancy pictogram to healthcare

* chore(tests): update snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -328,6 +328,7 @@ categories:
       - mri--patient
       - pill--bottle--01
       - pills
+      - pregnant
       - stethoscope
       - x-ray--01
       - x-ray--02
