chore(lint): fix style lint errors (#6370)
* chore(project): update ci-check to include stylelint

* chore(lint): start style linting

* chore(lint): lint through data-table core

* chore(lint): fix style lint errors

* chore(lint): clear rest of stylelint errors

* chore(test): ignore react style errors

* chore(lint): fix more linting errors

* chore(lint): remove unused stylelint ignore

* chore(lint): fix lint error

Co-authored-by: Josh Black <josh@josh.black>

--- a/.stylelintignore
+++ b/.stylelintignore
@@ -14,6 +14,8 @@ packages/components/demo/**
 packages/components/tests/**
 packages/components/css/**
 packages/components/scss/**
+packages/components/src/components/date-picker/_flatpickr.scss
 
 # packages/react
 packages/react/storybook-static/**
+packages/react/src/components/**
