feat(icons): 3 new select tool icons (#6439)
* icons-new-select-tools

3 new icons
updated master Ai file
updated categories.yml file
all icons approved by BXD

- 32/lasso.svg
- 32/select--01.svg
- 32/select--02.svg

* chore(tests): update snapshots

* chore(tests): merge, update snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/icons/categories.yml
+++ b/packages/icons/categories.yml
@@ -100,6 +100,7 @@ categories:
           - image
           - image--reference
           - language
+          - lasso
           - link
           - list--boxes
           - list--bulleted
@@ -126,6 +127,8 @@ categories:
           - rotate--counterclockwise--alt--filled
           - rotate--counterclockwise--filled
           - save
+          - select--01
+          - select--02
           - spell-check
           - spray-paint
           - text--align--center
