--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/type",
   "description": "Typography for digital and software products using the Carbon Design System",
-  "version": "10.12.0",
+  "version": "10.13.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.3.0",
-    "@carbon/layout": "^10.11.0"
+    "@carbon/layout": "^10.12.0-rc.0"
   },
   "devDependencies": {
     "@carbon/bundler": "^10.9.0",
