--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/elements",
   "description": "A collection of design elements in code for the IBM Design Language",
-  "version": "10.15.0-rc.0",
+  "version": "10.15.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -32,13 +32,13 @@
   },
   "dependencies": {
     "@carbon/colors": "^10.11.0",
-    "@carbon/grid": "^10.13.0-rc.0",
-    "@carbon/icons": "^10.14.0-rc.0",
+    "@carbon/grid": "^10.13.0",
+    "@carbon/icons": "^10.14.0",
     "@carbon/import-once": "^10.3.0",
-    "@carbon/layout": "^10.12.0-rc.0",
+    "@carbon/layout": "^10.12.0",
     "@carbon/motion": "^10.9.0",
-    "@carbon/themes": "^10.15.0-rc.0",
-    "@carbon/type": "^10.13.0-rc.0"
+    "@carbon/themes": "^10.15.0",
+    "@carbon/type": "^10.13.0"
   },
   "devDependencies": {
     "@carbon/bundler": "^10.9.0",
