refactor(project): move config packages to config folder (#6486)
* refactor(project): move config packages to config folder

* chore(project): update path to stylelint config

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "actions/*"
+      "actions/*",
+      "config/*"
     ],
     "nohoist": []
   },
@@ -139,7 +140,7 @@
   },
   "stylelint": {
     "extends": [
-      "./packages/stylelint-config-carbon"
+      "./config/stylelint-config-carbon"
     ]
   },
   "jest": {
