feat(pictograms): replaced watson--avatar with ibm--watson, and added ibm--cloud (#6294)
* replaced watson--avatar with ibm--watson, and added ibm--cloud

* chore: update snapshots

* chore(pictograms): add watson--avatar to deprecated, add svg back in

* chore(test): update snapshots

Co-authored-by: Alessandra Davila <aledavila@ibm.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -138,6 +138,7 @@ categories:
       - global--technology--services
       - hybrid--cloud
       - hybrid--cloud--services
+      - ibm--cloud
       - java
       - javascript
       - list--bullet
@@ -626,6 +627,7 @@ categories:
       - deliver--insights
       - dialogue
       - document--conversion
+      - ibm--watson
       - knows--dark--data
       - language
       - language--01
