feat(project): add issue triage workflow and action (#6504)
* feat(project): add issue triage workflow and action

* chore(actions): clean-up issue action

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/lerna.json
+++ b/lerna.json
@@ -2,11 +2,10 @@
   "lerna": "3.13.4",
   "version": "independent",
   "npmClient": "yarn",
-  "npmClientArgs": [
-    "--frozen-lockfile"
-  ],
+  "npmClientArgs": ["--frozen-lockfile"],
   "useWorkspaces": true,
   "ignoreChanges": [
+    "actions/**",
     "**/__fixtures__/**",
     "**/__tests__/**",
     "**/docs/**",
