--- a/config/prettier-config-carbon/package.json
+++ b/config/prettier-config-carbon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prettier-config-carbon",
   "description": "Prettier config for the Carbon Design System",
-  "version": "0.2.0",
+  "version": "0.3.0-rc.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/config/prettier-config-carbon",
