--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/react-hooks",
   "private": true,
-  "version": "10.11.0-rc.0",
+  "version": "10.11.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -38,8 +38,8 @@
     "@storybook/react": "^5.3.19",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.1.0",
-    "browserslist-config-carbon": "^10.5.0-rc.0",
-    "carbon-components": "^10.17.0-rc.0",
+    "browserslist-config-carbon": "^10.5.0",
+    "carbon-components": "^10.17.0",
     "css-loader": "^3.4.2",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
