--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "10.17.0-rc.0",
+  "version": "10.17.0",
   "license": "Apache-2.0",
   "main": "umd/index.js",
   "module": "es/index.js",
@@ -79,9 +79,9 @@
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
     "@babel/runtime": "^7.10.0",
-    "@carbon/elements": "^10.16.0-rc.0",
-    "@carbon/icons-handlebars": "^10.15.0-rc.0",
-    "@carbon/icons-react": "^10.15.0-rc.0",
+    "@carbon/elements": "^10.16.0",
+    "@carbon/icons-handlebars": "^10.15.0",
+    "@carbon/icons-react": "^10.15.0",
     "@carbon/test-utils": "^10.10.0",
     "@frctl/fractal": "^1.1.0",
     "adaro": "1.0.4",
@@ -93,7 +93,7 @@
     "babel-plugin-rewire": "^1.1.0",
     "bluebird": "~3.1.1",
     "browser-sync": "^2.26.3",
-    "browserslist-config-carbon": "^10.5.0-rc.0",
+    "browserslist-config-carbon": "^10.5.0",
     "carbon-components": "^9.0.0",
     "carbon-components-react": "^6.0.0",
     "chokidar": "^2.0.0",
