--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components-react",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "7.17.0-rc.0",
+  "version": "7.17.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -39,7 +39,7 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "@carbon/icons-react": "^10.15.0-rc.0",
+    "@carbon/icons-react": "^10.15.0",
     "classnames": "2.2.6",
     "downshift": "5.2.1",
     "flatpickr": "4.6.1",
@@ -83,8 +83,8 @@
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-react-docgen": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.0",
-    "browserslist-config-carbon": "^10.5.0-rc.0",
-    "carbon-components": "^10.17.0-rc.0",
+    "browserslist-config-carbon": "^10.5.0",
+    "carbon-components": "^10.17.0",
     "carbon-icons": "^7.0.5",
     "chalk": "^2.3.0",
     "cli-table": "^0.3.0",
