Controls cat name and asset update (#6676)
* updated incorrect friendly names in data analytics cat

* controls category two name/asset updates

* chore: update snapshots

Co-authored-by: emyarod <afw5059@gmail.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -163,6 +163,8 @@ categories:
       - slider
       - toggle
       - video
+      - video--01
+      - video--02
       - video--alt
       - video--chat
       - video--play
