--- a/packages/pictograms/pictograms.yml
+++ b/packages/pictograms/pictograms.yml
@@ -3940,6 +3940,18 @@
     - video 01
     - video
     - controls
+- name: video--01
+  friendly_name: Video 01
+  aliases:
+    - video 01
+    - video
+    - controls
+- name: video--02
+  friendly_name: Video 02
+  aliases:
+    - video 02
+    - video
+    - controls
 - name: video--alt
   friendly_name: Video 02
   aliases:
