--- a/config/eslint-config-carbon/package.json
+++ b/config/eslint-config-carbon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-carbon",
   "private": true,
-  "version": "2.3.0",
+  "version": "2.4.0-rc.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/config/eslint-config-carbon",
