--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/icon-build-helpers",
   "private": true,
   "description": "Build helpers for the Carbon Design System icon library",
-  "version": "0.9.0",
+  "version": "0.10.0-rc.0",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/icon-build-helpers",
