--- a/packages/pictograms-react/package.json
+++ b/packages/pictograms-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/pictograms-react",
   "description": "React components for pictograms in digital and software products using the Carbon Design System",
-  "version": "10.16.0",
+  "version": "10.17.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -32,8 +32,8 @@
     "@carbon/icon-helpers": "^10.9.0"
   },
   "devDependencies": {
-    "@carbon/icon-build-helpers": "^0.9.0",
-    "@carbon/pictograms": "^10.16.0"
+    "@carbon/icon-build-helpers": "^0.10.0-rc.0",
+    "@carbon/pictograms": "^10.17.0-rc.0"
   },
   "sideEffects": false
 }
