--- a/config/stylelint-config-carbon/package.json
+++ b/config/stylelint-config-carbon/package.json
@@ -1,8 +1,7 @@
 {
   "name": "stylelint-config-carbon",
-  "private": true,
-  "description": "Stylelint configuration for the Carbon Design System",
-  "version": "0.4.0",
+  "description": "Stylelint configuration for Carbon",
+  "version": "1.0.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/config/stylelint-config-carbon",
