--- a/packages/icons/categories.yml
+++ b/packages/icons/categories.yml
@@ -212,6 +212,7 @@ categories:
           - arrows--vertical
           - automatic
           - bookmark
+          - bookmark--filled
           - branch
           - caret--sort
           - caret--sort--down
@@ -246,7 +247,9 @@ categories:
           - filter--remove
           - filter--reset
           - flag
+          - flag--filled
           - fork
+          - function-math
           - image--search
           - insert
           - insert--page
@@ -270,7 +273,10 @@ categories:
           - operations--field
           - operations--record
           - package
+          - pan--horizontal
+          - pan--vertical
           - pin
+          - pin--filled
           - recently-viewed
           - recommend
           - redo
@@ -414,10 +420,12 @@ categories:
           - finance
           - fish
           - fish--multiple
+          - fragile
           - fruit-bowl
           - gift
           - industry
           - inventory-management
+          - keep-dry
           - money
           - noodle-bowl
           - purchase
@@ -427,11 +435,14 @@ categories:
           - shopping--catalog
           - soccer
           - sprout
+          - stack-limitation
           - store
           - strawberry
           - tennis
           - tennis-ball
+          - this-side-up
           - tree
+          - two-person-lift
           - wallet
           - wheat
           - wireless-checkout
@@ -463,6 +474,8 @@ categories:
           - annotation-visibility
           - arrow--annotation
           - auto-scroll
+          - brush-freehand
+          - brush-polygon
           - cd--archive
           - cd--create-archive
           - cd--create-exchange
@@ -470,6 +483,7 @@ categories:
           - chemistry--reference
           - circle-measurement
           - cobb-angle
+          - contour-finding
           - coronavirus
           - cross-reference
           - cut-in-half
@@ -631,13 +645,26 @@ categories:
           - archive
           - blockchain
           - box-plot
+          - calendar--heat-map
           - character-patterns
           - chart--3D
           - chart--area
+          - chart--area-smooth
+          - chart--area-stepper
           - chart--bar
+          - chart--bar-floating
+          - chart--bar-overlay
+          - chart--bar-stacked
+          - chart--bar-target
           - chart--bubble
+          - chart--bullet
           - chart--candlestick
           - chart--cluster-bar
+          - chart--column
+          - chart--column-floating
+          - chart--column-target
+          - chart--combo
+          - chart--combo-stacked
           - chart--custom
           - chart--error-bar
           - chart--error-bar--alt
@@ -646,13 +673,17 @@ categories:
           - chart--histogram
           - chart--line
           - chart--line--data
+          - chart--line-smooth
+          - chart--marimekko
           - chart--multi-line
           - chart--multitype
           - chart--network
           - chart--parallel
           - chart--pie
+          - chart--point
           - chart--population
           - chart--radar
+          - chart--radial
           - chart--relationship
           - chart--ring
           - chart--river
@@ -660,9 +691,11 @@ categories:
           - chart--scatter
           - chart--stacked
           - chart--stepper
+          - chart--sunburst
           - chart--treemap
           - chart--t-sne
           - chart--venn-diagram
+          - chart--waterfall
           - circle-packing
           - circle--filled
           - classifier--language
@@ -671,6 +704,7 @@ categories:
           - concept
           - container-software
           - covariate
+          - cross-tab
           - data--1
           - data--2
           - data--base
@@ -683,6 +717,7 @@ categories:
           - data--structured
           - data--unstructured
           - data-class
+          - data-player
           - data-refinery
           - data-refinery--reference
           - data-share
@@ -693,10 +728,12 @@ categories:
           - data-vis--3
           - data-vis--4
           - datastore
+          - decision-tree
           - diagram
           - diagram--reference
           - document-sentiment
           - double-integer
+          - driver-analysis
           - factor
           - flow
           - flow--connection
@@ -708,6 +745,7 @@ categories:
           - heat-map
           - heat-map--02
           - heat-map--03
+          - heat-map--stocks
           - hybrid-networking
           - improve-relevance
           - interactions
@@ -732,11 +770,13 @@ categories:
           - phrase-sentiment
           - presentation-file
           - qq-plot
+          - quadrant-plot
           - query-queue
           - report
           - report--data
           - row--collapse
           - row--expand
+          - sankey-diagram
           - scatter-matrix
           - schematics
           - share-knowledge
@@ -747,6 +787,7 @@ categories:
           - stem-leaf-plot
           - string-integer
           - string-text
+          - summary--KPI
           - sys-provision
           - table
           - table--split
@@ -794,10 +835,12 @@ categories:
           - closed-caption--filled
           - cloud-foundry--1
           - cloud-foundry--2
+          - content-view
           - copy
           - copy--file
           - course
           - CSV
+          - cube-view
           - DOC
           - document
           - document--add
@@ -840,6 +883,7 @@ categories:
           - legend
           - list--dropdown
           - model
+          - model--alt
           - model--reference
           - MOV
           - MP3
@@ -881,6 +925,7 @@ categories:
           - TXT
           - TXT--reference
           - upload
+          - websheet
           - WMV
           - workspace
           - XLS
@@ -1200,8 +1245,14 @@ categories:
           - code--reference
           - connection-signal
           - debug
+          - deployment-pattern
+          - deployment-policy
           - development
           - devices
+          - edge-cluster
+          - edge-device
+          - edge-node
+          - edge-service
           - email
           - email--new
           - fetch-upload
@@ -1219,11 +1270,13 @@ categories:
           - keyboard
           - laptop
           - logo--jupyter
+          - logo--keybase
           - logo--openshift
           - logo--python
           - logo--r-script
           - logo--vmware
           - machine-learning
+          - machine-learning-model
           - mail--all
           - mail--reply
           - mobile
@@ -1241,6 +1294,7 @@ categories:
           - rocket
           - rss
           - share
+          - signal-strength
           - tablet
           - tablet--landscape
           - terminal
