--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/grid",
   "description": "Grid for digital and software products using the Carbon Design System",
-  "version": "10.15.0-rc.0",
+  "version": "10.15.0",
   "license": "Apache-2.0",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/grid",
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.3.0",
-    "@carbon/layout": "^10.13.0-rc.0"
+    "@carbon/layout": "^10.13.0"
   },
   "devDependencies": {
     "@carbon/bundler": "^10.9.0",
