--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/elements",
   "description": "A collection of design elements in code for the IBM Design Language",
-  "version": "10.18.0",
+  "version": "10.19.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,8 +37,8 @@
     "@carbon/import-once": "^10.3.0",
     "@carbon/layout": "^10.13.0",
     "@carbon/motion": "^10.9.0",
-    "@carbon/themes": "^10.18.0",
-    "@carbon/type": "^10.15.0"
+    "@carbon/themes": "^10.19.0-rc.0",
+    "@carbon/type": "^10.16.0-rc.0"
   },
   "devDependencies": {
     "@carbon/bundler": "^10.9.0",
