--- a/packages/sketch/package.json
+++ b/packages/sketch/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/sketch",
   "private": true,
   "description": "Tooling for generating a sketch plugin to bring code to design",
-  "version": "10.18.0-rc.0",
+  "version": "10.18.0",
   "license": "Apache-2.0",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/sketch",
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
@@ -27,9 +27,9 @@
     "@babel/polyfill": "^7.8.7",
     "@carbon/colors": "^10.13.0",
     "@carbon/icon-helpers": "^10.9.0",
-    "@carbon/icons": "^10.17.0",
-    "@carbon/themes": "^10.19.0-rc.0",
-    "@carbon/type": "^10.16.0-rc.0",
+    "@carbon/icons": "^10.18.0",
+    "@carbon/themes": "^10.19.0",
+    "@carbon/type": "^10.16.0",
     "@skpm/builder": "^0.7.0",
     "color-string": "^1.5.3",
     "skpm": "^1.2.0"
