--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
           "perf",
           "refactor",
           "revert",
-          "test"
+          "test",
+          "style"
         ]
       ]
     }
