chore: add react and react-dom 17 version to peerDependencies (#7131)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -24,7 +24,7 @@
     "watch": "yarn clean && rollup -c -w"
   },
   "peerDependencies": {
-    "react": "^16.9.0"
+    "react": "^16.9.0 || ^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.0",
