--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -35,8 +35,8 @@
   "peerDependencies": {
     "carbon-components": "^10.9.0",
     "carbon-icons": "^7.0.7",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^16.8.6 || ^17.0.1",
+    "react-dom": "^16.8.6 || ^17.0.1"
   },
   "dependencies": {
     "@carbon/icons-react": "^10.20.0-rc.0",
